--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -2208,7 +2208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2225,36 +2225,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bidict({1: (2, 1), 2: (3, 1), 3: (2, 2), 4: (2, 4), 5: (3, 4)})\n",
-      "collision 3 4\n",
-      "? bidict({1: (2, 0), 2: (3, 0), 3: (2, 3), 4: (2, 4), 5: (3, 3)}) {3}\n",
-      "0 [(2, 0), (3, 0), (2, 2), (2, 4), (3, 3)]\n",
-      "? bidict({1: (2, 1), 2: (3, 1), 3: (1, 2), 4: (2, 5), 5: (4, 3)}) set()\n",
-      "1 [(2, 1), (3, 1), (1, 2), (2, 5), (4, 3)]\n",
-      "? bidict({1: (2, 0), 2: (4, 1), 3: (0, 2), 4: (2, 5), 5: (4, 3)}) set()\n",
-      "2 [(2, 0), (4, 1), (0, 2), (2, 5), (4, 3)]\n",
-      "? bidict({1: (2, 0), 2: (4, 1), 3: (0, 2), 4: (2, 5), 5: (4, 3)}) set()\n",
-      "3 [(2, 0), (4, 1), (0, 2), (2, 5), (4, 3)]\n",
-      "? bidict({1: (2, 0), 2: (4, 1), 3: (0, 2), 4: (2, 5), 5: (4, 3)}) set()\n",
-      "4 [(2, 0), (4, 1), (0, 2), (2, 5), (4, 3)]\n",
-      "? bidict({1: (2, 0), 2: (4, 1), 3: (0, 2), 4: (2, 5), 5: (4, 3)}) set()\n",
-      "5 [(2, 0), (4, 1), (0, 2), (2, 5), (4, 3)]\n",
-      "? bidict({1: (2, 0), 2: (4, 1), 3: (0, 2), 4: (2, 5), 5: (4, 3)}) set()\n",
-      "6 [(2, 0), (4, 1), (0, 2), (2, 5), (4, 3)]\n",
-      "? bidict({1: (2, 0), 2: (4, 1), 3: (0, 2), 4: (2, 5), 5: (4, 3)}) set()\n",
-      "7 [(2, 0), (4, 1), (0, 2), (2, 5), (4, 3)]\n",
-      "? bidict({1: (2, 0), 2: (4, 1), 3: (0, 2), 4: (2, 5), 5: (4, 3)}) set()\n",
-      "8 [(2, 0), (4, 1), (0, 2), (2, 5), (4, 3)]\n",
-      "? bidict({1: (2, 0), 2: (4, 1), 3: (0, 2), 4: (2, 5), 5: (4, 3)}) set()\n",
-      "9 [(2, 0), (4, 1), (0, 2), (2, 5), (4, 3)]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "110"
+      ]
+     },
+     "execution_count": 192,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2280,56 +2262,137 @@
     "  \n",
     "def dance_round(elves, stage):\n",
     "  preferences = get_directions(stage)\n",
-    "  candidates, duplicates = bidict(), set()  \n",
+    "  candidates, duplicates, stationary = bidict(), set(), 0\n",
     "  for elf in elves:\n",
     "    new = adjacency(elves[elf], elves, preferences)\n",
     "    if collision := candidates.inverse.get(new):\n",
-    "      print('collision', collision, elf)\n",
+    "      # print('collision', collision, elf)\n",
     "      duplicates.add(collision)\n",
     "      candidates[elf] = elves[elf]\n",
+    "      stationary += 1\n",
     "    else:\n",
     "      candidates[elf] = new\n",
-    "  print('?', candidates, duplicates)\n",
+    "      stationary += 1 if new == elves[elf] else 0\n",
     "  for stuck in duplicates:\n",
     "    candidates[stuck] = elves[stuck]\n",
-    "  return candidates\n",
+    "    stationary += 1\n",
+    "  return candidates, stationary == len(elves)\n",
     "\n",
-    "def day23(elves):\n",
-    "  print(elves)\n",
+    "def elf_bounds(elves):\n",
+    "  xmin, xmax, ymin, ymax = math.inf, 0, math.inf, 0\n",
+    "  for elf in elves:\n",
+    "    x, y = elves[elf]\n",
+    "    xmin, xmax, ymin, ymax = min(xmin, x), max(xmax, x), min(ymin, y), max(ymax, y)\n",
+    "  # print(elves, xmin, xmax, ymin, ymax)\n",
+    "  return xmin, xmax+1, ymin, ymax+1\n",
+    "\n",
+    "def plot_elves(elves, round, skip_plot=False):\n",
+    "  xmin, xmax, ymin, ymax = elf_bounds(elves)\n",
+    "  if not skip_plot:\n",
+    "    print(f'End of Round {round}')\n",
+    "    for j in range(ymin, ymax):\n",
+    "      line = ''\n",
+    "      for i in range(xmin, xmax):\n",
+    "        line += ('#' if elves.inverse.get((i, j)) else '.')\n",
+    "      print(line)\n",
+    "    print('')\n",
+    "  return xmin, xmax, ymin, ymax\n",
+    "\n",
+    "def day23_1(elves):\n",
+    "  # plot(elves)\n",
     "  for i in range(10):\n",
-    "    elves = dance_round(elves, i%4)\n",
-    "    print(i, [elves[x] for x in range(1, len(elves)+1)])\n",
-    "    # break\n",
+    "    elves, done = dance_round(elves, i%4)\n",
+    "    # plot_elves(elves, i+1)\n",
+    "    if done:\n",
+    "      break\n",
+    "  xmin, xmax, ymin, ymax = plot_elves(elves, i, True)\n",
+    "  return (xmax-xmin)*(ymax-ymin)-len(elves)\n",
     "\n",
-    "day23(data23)"
+    "day23_1(data23)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 193,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 False\n",
+      "1 False\n",
+      "2 False\n",
+      "3 False\n",
+      "4 False\n",
+      "5 False\n",
+      "6 False\n",
+      "7 False\n",
+      "8 False\n",
+      "9 False\n",
+      "End of Round 10\n",
+      "......#.....\n",
+      "..........#.\n",
+      ".#.#..#.....\n",
+      ".....#......\n",
+      "..#.....#..#\n",
+      "#......##...\n",
+      "....##......\n",
+      ".#........#.\n",
+      "...#.#..#...\n",
+      "............\n",
+      "...#..#..#..\n",
+      "\n",
+      "10 False\n",
+      "11 False\n",
+      "12 False\n",
+      "13 False\n",
+      "14 False\n",
+      "15 False\n",
+      "16 False\n",
+      "17 False\n",
+      "18 False\n",
+      "19 True\n",
+      "End of Round 20\n",
+      ".......#......\n",
+      "....#......#..\n",
+      "..#.....#.....\n",
+      "......#.......\n",
+      "...#....#.#..#\n",
+      "#.............\n",
+      "....#.....#...\n",
+      "..#.....#.....\n",
+      "....#.#....#..\n",
+      ".........#....\n",
+      "....#......#..\n",
+      ".......#......\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 193,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def dance_round(elves, stage):\n",
-    "  preferences = get_directions(stage)\n",
-    "  remaining = set(elves.keys())\n",
-    "  duplicates = set()\n",
-    "  candidates = bidict()  \n",
-    "  for diff, adj1, adj2 in directions:\n",
-    "    for elf in remaining.copy():\n",
-    "      new, d1, d2 = tuple_add(elves[elf], diff), tuple_add(elves[elf], adj1), tuple_add(elves[elf], adj2)\n",
-    "      if any((elves.inverse.get(new), elves.inverse.get(d1), elves.inverse.get(d2))):\n",
-    "        continue\n",
-    "      remaining.remove(elf)\n",
-    "      if collision := candidates.inverse.get(new):\n",
-    "        print('collision', collision, elf)\n",
-    "        duplicates.add(collision)\n",
-    "        candidates[elf] = elves[elf]\n",
-    "      else:\n",
-    "        candidates[elf] = new\n",
-    "  for stuck in duplicates:\n",
-    "    candidates[stuck] = elves[stuck]\n",
-    "  return candidates"
+    "def day23_2(elves):\n",
+    "  done, round = False, 0\n",
+    "  # while not done:\n",
+    "  for i in range(20):\n",
+    "    elves, done = dance_round(elves, i%4)\n",
+    "    print(i, done)\n",
+    "    round += 1\n",
+    "    if not round%10:\n",
+    "      plot_elves(elves, round)\n",
+    "  return round\n",
+    "\n",
+    "day23_2(data23)"
    ]
   }
  ],
