--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -2208,7 +2208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2225,16 +2225,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "110"
+       "4052"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2266,7 +2266,6 @@
     "  for elf in elves:\n",
     "    new = adjacency(elves[elf], elves, preferences)\n",
     "    if collision := candidates.inverse.get(new):\n",
-    "      # print('collision', collision, elf)\n",
     "      duplicates.add(collision)\n",
     "      candidates[elf] = elves[elf]\n",
     "      stationary += 1\n",
@@ -2283,7 +2282,6 @@
     "  for elf in elves:\n",
     "    x, y = elves[elf]\n",
     "    xmin, xmax, ymin, ymax = min(xmin, x), max(xmax, x), min(ymin, y), max(ymax, y)\n",
-    "  # print(elves, xmin, xmax, ymin, ymax)\n",
     "  return xmin, xmax+1, ymin, ymax+1\n",
     "\n",
     "def plot_elves(elves, round, skip_plot=False):\n",
@@ -2299,10 +2297,8 @@
     "  return xmin, xmax, ymin, ymax\n",
     "\n",
     "def day23_1(elves):\n",
-    "  # plot(elves)\n",
     "  for i in range(10):\n",
     "    elves, done = dance_round(elves, i%4)\n",
-    "    # plot_elves(elves, i+1)\n",
     "    if done:\n",
     "      break\n",
     "  xmin, xmax, ymin, ymax = plot_elves(elves, i, True)\n",
@@ -2313,69 +2309,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 False\n",
-      "1 False\n",
-      "2 False\n",
-      "3 False\n",
-      "4 False\n",
-      "5 False\n",
-      "6 False\n",
-      "7 False\n",
-      "8 False\n",
-      "9 False\n",
-      "End of Round 10\n",
-      "......#.....\n",
-      "..........#.\n",
-      ".#.#..#.....\n",
-      ".....#......\n",
-      "..#.....#..#\n",
-      "#......##...\n",
-      "....##......\n",
-      ".#........#.\n",
-      "...#.#..#...\n",
-      "............\n",
-      "...#..#..#..\n",
-      "\n",
-      "10 False\n",
-      "11 False\n",
-      "12 False\n",
-      "13 False\n",
-      "14 False\n",
-      "15 False\n",
-      "16 False\n",
-      "17 False\n",
-      "18 False\n",
-      "19 True\n",
-      "End of Round 20\n",
-      ".......#......\n",
-      "....#......#..\n",
-      "..#.....#.....\n",
-      "......#.......\n",
-      "...#....#.#..#\n",
-      "#.............\n",
-      "....#.....#...\n",
-      "..#.....#.....\n",
-      "....#.#....#..\n",
-      ".........#....\n",
-      "....#......#..\n",
-      ".......#......\n",
-      "\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "20"
+       "978"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2383,17 +2326,28 @@
    "source": [
     "def day23_2(elves):\n",
     "  done, round = False, 0\n",
-    "  # while not done:\n",
-    "  for i in range(20):\n",
-    "    elves, done = dance_round(elves, i%4)\n",
-    "    print(i, done)\n",
+    "  while not done:\n",
+    "    elves, done = dance_round(elves, round%4)\n",
     "    round += 1\n",
-    "    if not round%10:\n",
-    "      plot_elves(elves, round)\n",
     "  return round\n",
     "\n",
+    "# Takes about a minute\n",
     "day23_2(data23)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Day 24"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
