--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -960,7 +960,7 @@
        "339"
       ]
      },
-     "execution_count": 330,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -990,14 +990,15 @@
     "data12 = data(12)\n",
     "start, end, find_routes = parse12(data12)\n",
     "\n",
-    "def dijkstra(start, end, route_finder, cache={}):\n",
+    "def dijkstra(start, end, route_finder, cache={}, match_fn=lambda x, y: x==y):\n",
     "  visited, q = set([start]), deque(route_finder(start, 0))\n",
     "  while q:\n",
     "    current, i = q.popleft()\n",
-    "    if current == end:\n",
+    "    # print('hmm', current, end, len(q))\n",
+    "    if match_fn(current, end):\n",
     "      return i\n",
     "    for option, j in route_finder(current, i):\n",
-    "      if option not in visited:\n",
+    "      if option not in visited or cache.get(option, math.inf) > j:\n",
     "        q.append((option, j))\n",
     "        cache[option] = j\n",
     "      visited.add(option)\n",
@@ -2344,10 +2345,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((((1+1j), 1),\n",
+       "  ((2+1j), 1),\n",
+       "  ((4+1j), -1),\n",
+       "  ((5+1j), (-0-1j)),\n",
+       "  ((6+1j), -1),\n",
+       "  ((2+2j), -1),\n",
+       "  ((5+2j), -1),\n",
+       "  ((6+2j), -1),\n",
+       "  ((1+3j), 1),\n",
+       "  ((2+3j), 1j),\n",
+       "  ((4+3j), 1),\n",
+       "  ((5+3j), -1),\n",
+       "  ((6+3j), 1),\n",
+       "  ((1+4j), -1),\n",
+       "  ((2+4j), (-0-1j)),\n",
+       "  ((3+4j), 1j),\n",
+       "  ((4+4j), (-0-1j)),\n",
+       "  ((5+4j), (-0-1j)),\n",
+       "  ((6+4j), 1)),\n",
+       " 6,\n",
+       " 4)"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "directions = {'<': -1, '>': 1, 'v': 1j, '^': -1j}\n",
+    "\n",
+    "def parse24(data):\n",
+    "  blizzards = []  \n",
+    "  for y, line in enumerate(data[1:-1]):\n",
+    "    for x, c in enumerate(line[1:-1]):\n",
+    "      if not (diff := directions.get(c)):\n",
+    "        continue\n",
+    "      \n",
+    "      blizzards.append(((x+1) + (y+1)*1j, diff))\n",
+    "  return tuple(blizzards), x+1, y+1\n",
+    "\n",
+    "data24 = parse24(data(24))\n",
+    "data24"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(2+1j),\n",
+       " (2+2j),\n",
+       " (2+3j),\n",
+       " (2+4j),\n",
+       " (3+1j),\n",
+       " (3+2j),\n",
+       " (3+3j),\n",
+       " (4+1j),\n",
+       " (4+2j),\n",
+       " (5+2j),\n",
+       " (5+3j),\n",
+       " (5+4j),\n",
+       " (6+2j),\n",
+       " (6+3j)}"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def blizzard_positions(i, base, x, y):\n",
+    "  @lru_cache()\n",
+    "  def _blizzard_positions(i):\n",
+    "    if i == 0:\n",
+    "      # print([p[0] for p in base])\n",
+    "      return [p[0] for p in base]\n",
+    "    previous, result = _blizzard_positions(i-1), []\n",
+    "    for i, position in enumerate(previous):\n",
+    "      new = position + base[i][1]\n",
+    "      newx = ((new.real or x) % (x+1)) or 1\n",
+    "      newy = ((new.imag or y)) % (y+1) or 1\n",
+    "      result.append(newx + newy*1j)\n",
+    "    return result\n",
+    "  positions = _blizzard_positions(i)\n",
+    "  # print(positions, i)\n",
+    "  return set(positions)\n",
+    "\n",
+    "blizzard_positions(1, *data24)\n",
+    "blizzard_positions(2, *data24)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day24(base, x, y):\n",
+    "  cycle = math.lcm(x+1, y+1)\n",
+    "  start, end = 1, (x + (y+1)*1j)\n",
+    "  def route_finder(current, i):\n",
+    "    blizzard = blizzard_positions((i+1)%cycle, base, x, y)\n",
+    "    for diff in (0, 1, -1, 1j, -1j):\n",
+    "      new = current[0] + diff\n",
+    "      if new == end:# or new == start:\n",
+    "        yield (new, (i+1)), i+1\n",
+    "      if new.real < 1 or new.real > x or new.imag < 1 or new.imag > y or new in blizzard:\n",
+    "        continue\n",
+    "      yield (new, (i+1)%cycle), i+1\n",
+    "\n",
+    "  result = dijkstra((start, 0), end, route_finder, {}, lambda x, y: x[0] == y)\n",
+    "  return result\n",
+    "\n",
+    "day24(*data24)"
+   ]
   }
  ],
  "metadata": {
