--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -960,7 +960,7 @@
        "339"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -994,11 +994,12 @@
     "  visited, q = set([start]), deque(route_finder(start, 0))\n",
     "  while q:\n",
     "    current, i = q.popleft()\n",
-    "    # print('hmm', current, end, len(q))\n",
+    "    # print('hmm', current, len(q))\n",
     "    if match_fn(current, end):\n",
+    "      # print('end', current, end, i, cache)\n",
     "      return i\n",
     "    for option, j in route_finder(current, i):\n",
-    "      if option not in visited or cache.get(option, math.inf) > j:\n",
+    "      if option not in visited:# or cache.get(option, math.inf) > j:\n",
     "        q.append((option, j))\n",
     "        cache[option] = j\n",
     "      visited.add(option)\n",
@@ -2345,40 +2346,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 124,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((((1+1j), 1),\n",
-       "  ((2+1j), 1),\n",
-       "  ((4+1j), -1),\n",
-       "  ((5+1j), (-0-1j)),\n",
-       "  ((6+1j), -1),\n",
-       "  ((2+2j), -1),\n",
-       "  ((5+2j), -1),\n",
-       "  ((6+2j), -1),\n",
-       "  ((1+3j), 1),\n",
-       "  ((2+3j), 1j),\n",
-       "  ((4+3j), 1),\n",
-       "  ((5+3j), -1),\n",
-       "  ((6+3j), 1),\n",
-       "  ((1+4j), -1),\n",
-       "  ((2+4j), (-0-1j)),\n",
-       "  ((3+4j), 1j),\n",
-       "  ((4+4j), (-0-1j)),\n",
-       "  ((5+4j), (-0-1j)),\n",
-       "  ((6+4j), 1)),\n",
-       " 6,\n",
-       " 4)"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "directions = {'<': -1, '>': 1, 'v': 1j, '^': -1j}\n",
     "\n",
@@ -2392,40 +2362,45 @@
     "      blizzards.append(((x+1) + (y+1)*1j, diff))\n",
     "  return tuple(blizzards), x+1, y+1\n",
     "\n",
-    "data24 = parse24(data(24))\n",
-    "data24"
+    "data24 = parse24(data(24))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{(2+1j),\n",
+       "{(1+1j),\n",
+       " (1+3j),\n",
+       " (1+4j),\n",
+       " (2+1j),\n",
        " (2+2j),\n",
        " (2+3j),\n",
        " (2+4j),\n",
-       " (3+1j),\n",
-       " (3+2j),\n",
-       " (3+3j),\n",
+       " (3+4j),\n",
        " (4+1j),\n",
-       " (4+2j),\n",
+       " (4+3j),\n",
+       " (4+4j),\n",
+       " (5+1j),\n",
        " (5+2j),\n",
        " (5+3j),\n",
        " (5+4j),\n",
+       " (6+1j),\n",
        " (6+2j),\n",
-       " (6+3j)}"
+       " (6+3j),\n",
+       " (6+4j)}"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "@lru_cache()\n",
     "def blizzard_positions(i, base, x, y):\n",
     "  @lru_cache()\n",
     "  def _blizzard_positions(i):\n",
@@ -2443,35 +2418,35 @@
     "  # print(positions, i)\n",
     "  return set(positions)\n",
     "\n",
-    "blizzard_positions(1, *data24)\n",
-    "blizzard_positions(2, *data24)"
+    "# blizzard_positions(1, *data24)\n",
+    "blizzard_positions(300, *data24)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "18"
+       "326"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def day24(base, x, y):\n",
-    "  cycle = math.lcm(x+1, y+1)\n",
+    "  cycle = math.lcm(x, y)\n",
     "  start, end = 1, (x + (y+1)*1j)\n",
     "  def route_finder(current, i):\n",
     "    blizzard = blizzard_positions((i+1)%cycle, base, x, y)\n",
-    "    for diff in (0, 1, -1, 1j, -1j):\n",
+    "    for diff in (1, -1, 0, 1j, -1j):\n",
     "      new = current[0] + diff\n",
-    "      if new == end:# or new == start:\n",
+    "      if new == end or new == start:\n",
     "        yield (new, (i+1)), i+1\n",
     "      if new.real < 1 or new.real > x or new.imag < 1 or new.imag > y or new in blizzard:\n",
     "        continue\n",
@@ -2480,7 +2455,50 @@
     "  result = dijkstra((start, 0), end, route_finder, {}, lambda x, y: x[0] == y)\n",
     "  return result\n",
     "\n",
+    "# Takes a minute or so\n",
     "day24(*data24)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18\n",
+      "54\n"
+     ]
+    }
+   ],
+   "source": [
+    "def day24_2(base, x, y):\n",
+    "  cycle = math.lcm(x, y)\n",
+    "  start, end = 1, (x + (y+1)*1j)\n",
+    "\n",
+    "  def route_finder(current, i):\n",
+    "    i = max(current[1], i)\n",
+    "    blizzard = blizzard_positions((i+1)%cycle, base, x, y)\n",
+    "    for diff in (1, -1, 0, 1j, -1j):\n",
+    "      new = current[0] + diff\n",
+    "      if new == end or new == start:\n",
+    "        yield (new, (i+1)%cycle), i+1\n",
+    "      if new.real < 1 or new.real > x or new.imag < 1 or new.imag > y or new in blizzard:\n",
+    "        continue\n",
+    "      yield (new, (i+1)%cycle), i+1\n",
+    "\n",
+    "\n",
+    "  result = dijkstra((start, 0), end, route_finder, {}, lambda x, y: x[0] == y)\n",
+    "  yield result\n",
+    "  result = dijkstra((end, result), start, route_finder, {}, lambda x, y: x[0] == y)\n",
+    "  result = dijkstra((start, result), end, route_finder, {}, lambda x, y: x[0] == y)\n",
+    "  yield result\n",
+    "\n",
+    "# Takes a minute or so\n",
+    "for result in day24_2(*data24):\n",
+    "  print(result)"
    ]
   }
  ],
