--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -994,12 +994,10 @@
     "  visited, q = set([start]), deque(route_finder(start, 0))\n",
     "  while q:\n",
     "    current, i = q.popleft()\n",
-    "    # print('hmm', current, len(q))\n",
     "    if match_fn(current, end):\n",
-    "      # print('end', current, end, i, cache)\n",
     "      return i\n",
     "    for option, j in route_finder(current, i):\n",
-    "      if option not in visited:# or cache.get(option, math.inf) > j:\n",
+    "      if option not in visited:# actually DFS: should be `or cache.get(option, math.inf) > j:`\n",
     "        q.append((option, j))\n",
     "        cache[option] = j\n",
     "      visited.add(option)\n",
@@ -2346,7 +2344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2367,36 +2365,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{(1+1j),\n",
-       " (1+3j),\n",
-       " (1+4j),\n",
-       " (2+1j),\n",
-       " (2+2j),\n",
-       " (2+3j),\n",
-       " (2+4j),\n",
-       " (3+4j),\n",
-       " (4+1j),\n",
-       " (4+3j),\n",
-       " (4+4j),\n",
-       " (5+1j),\n",
-       " (5+2j),\n",
-       " (5+3j),\n",
-       " (5+4j),\n",
-       " (6+1j),\n",
-       " (6+2j),\n",
-       " (6+3j),\n",
-       " (6+4j)}"
-      ]
-     },
-     "execution_count": 125,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "326\n",
+      "976\n"
+     ]
     }
    ],
    "source": [
@@ -2405,7 +2383,6 @@
     "  @lru_cache()\n",
     "  def _blizzard_positions(i):\n",
     "    if i == 0:\n",
-    "      # print([p[0] for p in base])\n",
     "      return [p[0] for p in base]\n",
     "    previous, result = _blizzard_positions(i-1), []\n",
     "    for i, position in enumerate(previous):\n",
@@ -2415,66 +2392,9 @@
     "      result.append(newx + newy*1j)\n",
     "    return result\n",
     "  positions = _blizzard_positions(i)\n",
-    "  # print(positions, i)\n",
     "  return set(positions)\n",
     "\n",
-    "# blizzard_positions(1, *data24)\n",
-    "blizzard_positions(300, *data24)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "326"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "def day24(base, x, y):\n",
-    "  cycle = math.lcm(x, y)\n",
-    "  start, end = 1, (x + (y+1)*1j)\n",
-    "  def route_finder(current, i):\n",
-    "    blizzard = blizzard_positions((i+1)%cycle, base, x, y)\n",
-    "    for diff in (1, -1, 0, 1j, -1j):\n",
-    "      new = current[0] + diff\n",
-    "      if new == end or new == start:\n",
-    "        yield (new, (i+1)), i+1\n",
-    "      if new.real < 1 or new.real > x or new.imag < 1 or new.imag > y or new in blizzard:\n",
-    "        continue\n",
-    "      yield (new, (i+1)%cycle), i+1\n",
-    "\n",
-    "  result = dijkstra((start, 0), end, route_finder, {}, lambda x, y: x[0] == y)\n",
-    "  return result\n",
-    "\n",
-    "# Takes a minute or so\n",
-    "day24(*data24)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 130,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "18\n",
-      "54\n"
-     ]
-    }
-   ],
-   "source": [
-    "def day24_2(base, x, y):\n",
     "  cycle = math.lcm(x, y)\n",
     "  start, end = 1, (x + (y+1)*1j)\n",
     "\n",
@@ -2489,17 +2409,32 @@
     "        continue\n",
     "      yield (new, (i+1)%cycle), i+1\n",
     "\n",
+    "  dfs = lambda s, e: dijkstra(s, e, route_finder, {}, lambda x, y: x[0] == y)\n",
     "\n",
-    "  result = dijkstra((start, 0), end, route_finder, {}, lambda x, y: x[0] == y)\n",
-    "  yield result\n",
-    "  result = dijkstra((end, result), start, route_finder, {}, lambda x, y: x[0] == y)\n",
-    "  result = dijkstra((start, result), end, route_finder, {}, lambda x, y: x[0] == y)\n",
-    "  yield result\n",
+    "  minute = dfs((start, 0), end)\n",
+    "  yield minute\n",
+    "  minute = dfs((end, minute), start)\n",
+    "  minute = dfs((start, minute), end)\n",
+    "  yield minute\n",
     "\n",
-    "# Takes a minute or so\n",
-    "for result in day24_2(*data24):\n",
+    "# Takes a couple minutes\n",
+    "for result in day24(*data24):\n",
     "  print(result)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Day 25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
