--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -2431,10 +2431,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data25 = data(25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2-0-01==0-1=2212=100\n"
+     ]
+    }
+   ],
+   "source": [
+    "from_snafu_map = {\n",
+    "  '2': 2,\n",
+    "  '1': 1,\n",
+    "  '0': 0,\n",
+    "  '-': -1,\n",
+    "  '=': -2,\n",
+    "}\n",
+    "\n",
+    "def snafu2int(snafu):\n",
+    "  result = deque()\n",
+    "  for i in snafu:\n",
+    "    result.appendleft(from_snafu_map[i])\n",
+    "  return sum([x*5**(i) for i, x in enumerate(result)]  )\n",
+    "\n",
+    "to_snafu_map = {\n",
+    "  0: ('0', 0),\n",
+    "  1: ('1', 0),\n",
+    "  2: ('2', 0),\n",
+    "  3: ('=', 1),\n",
+    "  4: ('-', 1),\n",
+    "  5: ('0', 1),\n",
+    "}\n",
+    "\n",
+    "def int2snafu(n):\n",
+    "  if not n:\n",
+    "    return '0'\n",
+    "  result, carry = '', 0\n",
+    "  while n:\n",
+    "    i = int(n % 5)\n",
+    "    n //= 5\n",
+    "    value = i + carry\n",
+    "    r, carry = to_snafu_map[value]\n",
+    "    result = r + result\n",
+    "  return f'{carry}{result}' if carry else result\n",
+    "\n",
+    "print(int2snafu(sum(snafu2int(x) for x in data25)))"
+   ]
   }
  ],
  "metadata": {
