--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -2,12 +2,84 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "from collections import defaultdict\n",
+    "import numpy as np\n",
+    "import re\n",
+    "from typing import Callable, TypeVar\n",
+    "\n",
+    "T = TypeVar('T')\n",
+    "\n",
+    "def data(day: int, parser: Callable[[str], T] = str) -> list[T]:\n",
+    "  with open(f\"./data/day{day}.txt\") as f:\n",
+    "    return [parser(line.strip()) for line in f.readlines()]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55816\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "54980"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data1 = data(1)\n",
+    "\n",
+    "def day1(match):\n",
+    "    sum = 0\n",
+    "    for line in data1:\n",
+    "        matched = match(line)\n",
+    "        first, last = matched[0], matched[-1]\n",
+    "        # print(first, last, sum)\n",
+    "        sum += int(first + last)\n",
+    "    return sum\n",
+    "\n",
+    "print(day1(lambda x: re.findall(r'\\d', x)))\n",
+    "\n",
+    "def part2match(x):\n",
+    "    change = {\n",
+    "        'one': '1',\n",
+    "        'two': '2',\n",
+    "        'three': '3',\n",
+    "        'four': '4',\n",
+    "        'five': '5',\n",
+    "        'six': '6',\n",
+    "        'seven': '7',\n",
+    "        'eight': '8',\n",
+    "        'nine': '9',\n",
+    "    }\n",
+    "    matched = re.findall(r'(?=(\\d|one|two|three|four|five|six|seven|eight|nine))', x)\n",
+    "    return [change[match] if match in change else match for match in matched]\n",
+    "\n",
+    "day1(part2match)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
