--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
     "from collections import defaultdict\n",
+    "import functools\n",
     "import numpy as np\n",
     "import re\n",
     "from typing import Callable, TypeVar\n",
@@ -72,6 +73,63 @@
     "\n",
     "day1(part2match)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2377\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "71220"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def format2(line):\n",
+    "    def tuplefy(round):\n",
+    "        result = [0,0,0]\n",
+    "        for i in round:\n",
+    "            result[0 if 'blue' in i else 1 if 'green' in i else 2] += int(i.split(' ')[0])\n",
+    "        return result\n",
+    "\n",
+    "    line = line.split(': ')[-1]\n",
+    "    rounds = line.split('; ' )\n",
+    "    return np.array([tuplefy(x.split(', ')) for x in rounds])\n",
+    "\n",
+    "data2 = data(2, format2)\n",
+    "\n",
+    "def day2_1(start):\n",
+    "    result = 0\n",
+    "    for i, game in enumerate(data2):\n",
+    "        possible = np.subtract(start, game)\n",
+    "        if np.any(possible < 0):\n",
+    "            continue\n",
+    "        result += i+1\n",
+    "    return result\n",
+    "\n",
+    "print(day2_1((14, 13, 12)))\n",
+    "\n",
+    "def day2_2():\n",
+    "    result = 0\n",
+    "    for game in data2:\n",
+    "        requirements = np.amax(game, axis=0)\n",
+    "        result += functools.reduce(lambda x, y: x*y, requirements, 1)\n",
+    "    return result\n",
+    "day2_2()"
    ]
   },
   {
