--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,10 +182,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def parse4(line):\n",
+    "    winning, have = map(\n",
+    "        lambda numbers: {int(x) for x in numbers.split()},\n",
+    "        line.split(':')[-1].split('|')\n",
+    "    )\n",
+    "    return winning, have\n",
+    "\n",
+    "data4 = data(4, parse4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = 0\n",
+    "for line in data4:\n",
+    "    matches = line[0].intersection(line[1])\n",
+    "    if matches:\n",
+    "        result += 2**(len(matches)-1)\n",
+    "        # print(matches, result, 2**(len(matches)-1), len(matches)-1)\n",
+    "print(result)"
+   ]
   }
  ],
  "metadata": {
