--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -182,9 +182,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(25651, 19499881)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def parse4(line):\n",
     "    winning, have = map(\n",
@@ -193,60 +204,27 @@
     "    )\n",
     "    return winning, have\n",
     "\n",
-    "data4 = data(4, parse4)"
+    "data4 = data(4, parse4)\n",
+    "\n",
+    "def day4(data):\n",
+    "    result, cards = 0, Counter()\n",
+    "    for i, line in enumerate(data):\n",
+    "        matches = line[0].intersection(line[1])\n",
+    "        if matches:\n",
+    "            result += 2**(len(matches)-1)\n",
+    "        for n in range(len(matches)):\n",
+    "            cards[i+1+n] += cards[i]+1\n",
+    "    return result, cards.total() + len(data)\n",
+    "\n",
+    "day4(data4)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "25651\n"
-     ]
-    }
-   ],
-   "source": [
-    "result = 0\n",
-    "for line in data4:\n",
-    "    matches = line[0].intersection(line[1])\n",
-    "    if matches:\n",
-    "        result += 2**(len(matches)-1)\n",
-    "        # print(matches, result, 2**(len(matches)-1), len(matches)-1)\n",
-    "print(result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 ({41, 48, 17, 83, 86}, {6, 9, 48, 17, 83, 53, 86, 31}) {48, 17, 83, 86} Counter({1: 1, 2: 1, 3: 1, 4: 1})\n",
-      "1 ({32, 13, 16, 20, 61}, {32, 68, 17, 82, 19, 24, 61, 30}) {32, 61} Counter({2: 3, 3: 3, 1: 1, 4: 1})\n",
-      "2 ({1, 44, 53, 21, 59}, {1, 69, 72, 14, 16, 82, 21, 63}) {1, 21} Counter({3: 7, 4: 5, 2: 3, 1: 1})\n",
-      "3 ({69, 73, 41, 84, 92}, {5, 76, 51, 84, 83, 54, 58, 59}) {84} Counter({4: 13, 3: 7, 2: 3, 1: 1})\n",
-      "4 ({32, 83, 87, 26, 28}, {36, 70, 12, 82, 22, 88, 93, 30}) set() Counter({4: 13, 3: 7, 2: 3, 1: 1})\n",
-      "5 ({72, 13, 18, 56, 31}, {35, 67, 36, 74, 10, 11, 77, 23}) set() Counter({4: 13, 3: 7, 2: 3, 1: 1})\n",
-      "30\n"
-     ]
-    }
-   ],
-   "source": [
-    "cards = Counter()\n",
-    "for i, line in enumerate(data4):\n",
-    "    matches = line[0].intersection(line[1])\n",
-    "    for n in range(len(matches)):\n",
-    "        cards[i+1+n] += cards[i]+1\n",
-    "    # print(i, line, matches, cards)\n",
-    "print(cards.total()+len(data4))"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
