--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -2,11 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'intervaltree'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mcollections\u001b[39;00m \u001b[39mimport\u001b[39;00m defaultdict, Counter\n\u001b[0;32m----> 2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mintervaltree\u001b[39;00m \u001b[39mimport\u001b[39;00m IntervalTree\n\u001b[1;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mitertools\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mfunctools\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'intervaltree'"
+     ]
+    }
+   ],
    "source": [
     "from collections import defaultdict, Counter\n",
+    "from intervaltree import IntervalTree\n",
     "import itertools\n",
     "import functools\n",
     "import numpy as np\n",
@@ -221,10 +234,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 50 98 2\n",
+      "1 52 50 48\n",
+      "0 37 52 2\n",
+      "1 39 0 15\n",
+      "0 0 11 42\n",
+      "1 42 0 7\n",
+      "2 57 7 4\n",
+      "0 18 25 70\n",
+      "0 81 45 19\n",
+      "1 68 64 13\n",
+      "0 1 0 69\n",
+      "0 56 93 4\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "cannot unpack non-iterable NoneType object",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 19\u001b[0m\n\u001b[1;32m     15\u001b[0m         maps[name] \u001b[39m=\u001b[39m intervals\n\u001b[1;32m     17\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mlist\u001b[39m(seeds), maps\n\u001b[0;32m---> 19\u001b[0m data5 \u001b[39m=\u001b[39m day5_maps(data(\u001b[39m5\u001b[39;49m))\n\u001b[1;32m     20\u001b[0m data5\n",
+      "Cell \u001b[0;32mIn[9], line 14\u001b[0m, in \u001b[0;36mday5_maps\u001b[0;34m(lines)\u001b[0m\n\u001b[1;32m     12\u001b[0m maps \u001b[39m=\u001b[39m {}\n\u001b[1;32m     13\u001b[0m \u001b[39mwhile\u001b[39;00m lines:\n\u001b[0;32m---> 14\u001b[0m     name, intervals, lines \u001b[39m=\u001b[39m create_map(lines[\u001b[39m2\u001b[39m:])\n\u001b[1;32m     15\u001b[0m     maps[name] \u001b[39m=\u001b[39m intervals\n\u001b[1;32m     17\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mlist\u001b[39m(seeds), maps\n",
+      "\u001b[0;31mTypeError\u001b[0m: cannot unpack non-iterable NoneType object"
+     ]
+    }
+   ],
+   "source": [
+    "def day5_maps(lines):\n",
+    "    seeds = map(int, lines[0].split(': ')[-1].split())\n",
+    "\n",
+    "    def create_map(lines):\n",
+    "        name = lines[0].split(' ')[0]\n",
+    "        result = {}\n",
+    "        for i, line in enumerate(lines[1:]):\n",
+    "            if not line:\n",
+    "                return name, result, lines[i+1:]\n",
+    "            print(i, line)\n",
+    " \n",
+    "    maps = {}\n",
+    "    while lines:\n",
+    "        name, intervals, lines = create_map(lines[2:])\n",
+    "        maps[name] = intervals\n",
+    "\n",
+    "    return list(seeds), maps\n",
+    "\n",
+    "data5 = day5_maps(data(5))\n",
+    "data5\n"
+   ]
   }
  ],
  "metadata": {
